Opened 15 years ago

Closed 15 years ago

#5855 closed bug (fixed)

[CD Player] Page fault in double fault debugger without fault handler!

Reported by: HaikuBot Owned by: bonefish
Priority: high Milestone: R1/alpha2
Component: Drivers Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

I have lastest Haiku. When I try to launch CD Player app I get error. Can't run KDL cos it simply hang up so only photo. (see attach.)

Attachments (2)

cd_player.JPG (307.9 KB ) - added by HaikuBot 15 years ago.
cdplayer-bug.jpg (140.4 KB ) - added by siarzhuk 15 years ago.
backtrace of CDPlayer KDL session.

Download all attachments as: .zip

Change History (11)

by HaikuBot, 15 years ago

Attachment: cd_player.JPG added

comment:1 by bonefish, 15 years ago

What exact revision? Trunk or alpha2 branch?

Do you have syslog debug output disabled?

comment:2 by bonefish, 15 years ago

Component: Applications/CDPlayerSystem/Kernel
Owner: changed from darkwyrm to axeld

comment:3 by HaikuBot, 15 years ago

hrev36530. Yes, disabled.

in reply to:  3 comment:4 by HaikuBot, 15 years ago

Replying to HaikuBot:

hrev36530. Yes, disabled.

And trunk.

comment:5 by bonefish, 15 years ago

Any other non-default kernel settings?

This looks very similar to http://dev.haiku-os.org/ticket/5822#comment:7, which should be fixed in hrev36528. At least I could reproduce the KDL entering double fault before and can't anymore.

If you haven't changed/rebuilt this Haiku installation, please run

objdump -D --demangle /system/kernel_x86 | grep -C 100 800d2f77 > ~/Desktop/double-fault-eip.txt

in the Terminal and attach the generated file (double-fault-eip.txt on the desktop).

comment:6 by siarzhuk, 15 years ago

In the same situation I fall through sometime into KDL. To reproduce the problem at 100% I do the following:

1) Open Applications folder;

2) Press Ctrl-A to Select All links to applications;

3) Select "Open" from context menu;

4) After some seconds opening all applications - the KDL debugger welcomes me. The backtrace always say about CDPlayer process.

Screenshot is attached.

Maybe this is the same problem?

by siarzhuk, 15 years ago

Attachment: cdplayer-bug.jpg added

backtrace of CDPlayer KDL session.

comment:7 by bonefish, 15 years ago

Owner: changed from axeld to bonefish
Status: newin-progress

comment:8 by bonefish, 15 years ago

Component: System/KernelDrivers

Looks like the 6 byte emulation code in the SCSI bus manager is broken.

comment:9 by bonefish, 15 years ago

Resolution: fixed
Status: in-progressclosed

The problem with the not correctly balanced lock_memory() call is fixed in hrev36539. HaikuBot, if you still get a double fault when entering KDL (e.g. via Alt-Sysreq-D), please open a new ticket.

Note: See TracTickets for help on using tickets.