* get_emulation_buffer(): Don't replace the request data. Both callers   (scsi_start_mode_sense_6(), scsi_start_mode_select_6()) also call   replace_request_data(), which does the same. Therefore the original request   data were lost. scsi_start_mode_select_6() also copied the wrong data due   to this. * scsi_finish_mode_sense_10_6(): In case of error also call   restore_request_data() to restore the request data.

Fixes #5855 -- since the request data length was changed, unlock_memory() was
called with a different length than lock_memory(), thus triggering the
panic(). After starting CDPlayer the syslog is still spammed with failing
requests, so obviously something is still not OK.


git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@36539 a95241bf-73f2-0310-859d-f6bbb57e9c96